# glados-tts

./: .flake8  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  engine_old.py  pyproject.toml
glados_tts/: config.py  engine.py  gladosctl.py  models.py  restapi.py
glados_tts/openapi/: docs.py
glados_tts/openapi/jinja/: oauth2-redirect.html.j2  redoc.html.j2  swagger.html.j2
glados_tts/utils/: cleaners.py  numbers.py  symbols.py  tokenizer.py  tools.py
old/: engine-TTSVoiceWizard.py  glados.py
